# ai-rag

./: .gitignore  MERGE_STATUS.md  setup-docker-desktop.bat
.github/workflows/: ci.yml
docs/: call-chain-review.md  call-chain.md  codex-guidance.md  conflict-check.md  keycloak-token-lifecycle.md  model-architecture-review.md  module-requirements.md  ocr-comparison.md  project-assessment.md  quality-evaluation.md  service-ports.md  telegram-bot-review.md  user-management-plan.md  windows-docker-desktop.md
document-processor/: .env.example  Dockerfile  README.md  chunker.py  clients.py  db_schema.py  docker-compose.yml  enrichment.py  health_services.py  install.bat  main.py  ocr_backend.py  parser_any.py  parser_docx.py  parser_structured.py  parser_txt.py  pyproject.toml  run.bat  setup.ps1  worker.py
document-processor/tests/: test_chunker.py  test_markdown_parsers.py  test_worker_helpers.py
embedding_backfill_worker/: README.md  pyproject.toml  worker.py
embedding_service/: Dockerfile  Dockerfile.amd  check_python_version.py  docker-compose.yml  docker_build_and_run.bat  install.bat  install_environment.bat  log_config.yaml  main.py  model_manager.py  pyproject.toml  run.bat  run_server.bat
embedding_service/scripts/: run-dev.sh  run-prod.sh  run.bat  setup-dev-windows.bat  setup-dev-windows.ps1  setup-dev-wsl.sh  stop-prod.sh
embedding_service/src/: main.py  model_manager.py
knowledge-search-api/: .env.example  Dockerfile  README.md  auth.py  clients.py  context_builder.py  health_services.py  highlighter.py  history.py  install.bat  llm_logging.py  llm_provider.py  main.py  pyproject.toml  retrieval.py  run.bat  schemas.py
knowledge-search-api/tests/: test_llm_logging.py  test_retrieval_helpers.py
knowledge_base_api/: .dockerignore  Dockerfile  OIDC_SETUP.md  core.py  docker-compose.yml  init_db.py  logging_setup.py  main.py  models.py  pyproject.toml  run-docker.ps1  services.py  test.db
knowledge_base_api/knowledge_base_api1/: .dockerignore  docker-compose.yml  docker-entrypoint.sh  init_db.py  logging_config.py  main.py  pyproject.toml
knowledge_base_api/knowledge_base_api1.useless/: Dockerfile  logging_config.py
knowledge_base_api/knowledge_base_api1.useless/scripts/: docker-stop.bat  install.bat  run-tests.bat
knowledge_base_api/knowledge_base_api1/scripts/: run.bat
knowledge_base_api/knowledge_base_api1/tests/: test_main.py
knowledge_base_api/migrations/: 001_add_oidc_models.py  002_add_user_telegram_links.py  env.py
knowledge_base_api/routers/: admin.py  auth.py  items.py  telegram.py
knowledge_base_api/scripts/: docker-build-run.bat  docker-logs.bat  install.bat  run.bat  update-dependencies.bat
knowledge_base_api/tests/: conftest.py  docker-compose.ci.yml  test_main.py  test_oidc_integration.py
knowledge_base_bot/: .gitignore  Dockerfile  bot.py  deploy.ps1  deploy.sh  pyproject.toml
knowledge_base_bot/scripts/: install.bat  run.bat
landing/: App.tsx  README.md  index.css  index.html  manifest.json  metadata.json  package-lock.json  package.json  run.bat  server.py  vite.config.ts
landing/assets/: index-C0c00i3Z.css  index-CFtLdf9C.js
landing/components/: About.tsx  Contact.tsx  Demo.tsx  Footer.tsx  Header.tsx  Hero.tsx  IconComponents.tsx  RagDemo.tsx  Services.tsx  SpeechDemo.tsx  Technology.tsx  UseCases.tsx
rag-search-ui/: App.tsx  README.md  index.html  metadata.json  package.json  types.ts
rag-search-ui/components/: AdminPanel.tsx  ChatInput.tsx  ChatView.tsx  CitationCard.tsx  MessageItem.tsx  ProfileView.tsx  SearchOptionsPanel.tsx  Sidebar.tsx
rag-search-ui/components/icons/: CogIcon.tsx  PaperAirplaneIcon.tsx
rag-search-ui/services/: api.ts
rag_observability_stack/: .env.example  README.md  docker-compose.yml  prometheus.yml  setup_observability.ps1
rag_observability_stack/examples/: notebook_phoenix_pgvector.py
rag_observability_stack/grafana/dashboards/: fastapi_metrics.json  langchain_rag.json  llm_metrics.json  llm_usage.json  system_overview.json
rag_observability_stack/grafana/provisioning/: dashboards.yml
rag_observability_stack/nginx/: .htpasswd  Dockerfile  default.conf
rag_observability_stack/templates/: llm_client.py  metrics.py
tools/: check_conflicts.py
universal_embedder/: .env.example  Dockerfile  install.ps1  kratkie_pravila.docx  pyproject.toml  run.py  start.ps1  worker.py
windows-install/: .env.example  README.md  compose.yml  docker-compose.yml  install-poetry-deps.ps1  setup.ps1
