[tool.poetry]
name = "knowledge-base-bot"
version = "2.0.0"
description = "Interactive Telegram bot client for the Knowledge Base API"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = {extras = ["httpx"], version = "^20.7"}
httpx = "^0.25.1"
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
prometheus-client = "^0.19.0" # Добавлено для метрик

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.main.api"