[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
asyncpg = "^0.29.0"
python-dotenv = "^1.0.1"
openai = "^1.51.0" 

[tool.poetry.group.local-ml.dependencies]
torch = ">=2.0.0" 
torchvision = "*"
torchaudio = "*"
scipy = "*"
transformers = "^4.40.0"
sentence-transformers = "^2.7.0"
accelerate = "^0.30.1"
safetensors = "^0.4.3"
sentencepiece = "^0.2.0"

[tool.poetry.scripts]
start-worker = "run:main"