[tool.poetry]
name = "knowledge-base-service"
version = "3.1.0"
description = "Production-ready microservice with S3, DB Auth, auto-init, and deep health checks."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
# Core
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
asyncpg = "^0.28.0"
# S3 Storage
aioboto3 = "^12.0.0"
# Security
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
argon2-cffi = "^23.1.0"  # <-- ИЗМЕНЕНИЕ ЗДЕСЬ
# Other
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
python-json-logger = "^2.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.1"
aiosqlite = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.main.api"